--- a/MiddlemanAPI/Dockerfile
+++ b/MiddlemanAPI/Dockerfile
@@ -1,20 +1,17 @@
-﻿# Use official .NET SDK 8.0 image to build the app
+﻿# Use the official .NET SDK image for .NET 8
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+
 WORKDIR /app
 
-# Copy project files and restore dependencies
-COPY *.sln ./
-COPY MiddlemanAPI/*.csproj MiddlemanAPI/
-RUN dotnet restore MiddlemanAPI/MiddlemanAPI.csproj
+# Copy the csproj and restore any dependencies (via dotnet restore)
+COPY *.csproj ./
+RUN dotnet restore
 
-# Copy everything and build the app
-COPY MiddlemanAPI/. MiddlemanAPI/
-WORKDIR /app/MiddlemanAPI
-RUN dotnet publish -c Release -o /out
+# Copy the rest of the code
+COPY . ./
 
-# Use .NET 8 runtime image to run the app
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
-WORKDIR /app
-COPY --from=build /out .
-EXPOSE 80
-ENTRYPOINT ["dotnet", "MiddlemanAPI.dll"]
+# Publish the app
+RUN dotnet publish -c Release -o /app/publish
+
+# Define entrypoint
+ENTRYPOINT ["dotnet", "/app/publish/MiddlemanAPI.dll"]
